2008-07-08 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac: Remove AC_SUBST for LINGUAS path.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* help/Makefile.am: Add -Wno-portability to get rid of
	gnome-doc-utils warnings.
	* src/Makefile.am: Use GNOME_MAINTAINER_MODE_DEFINES.
	* data/Makefile.am: Don't try to install schemas.in files. Sigh.

	* configure.ac:
	* Makefile.am:
	Use m4 subdir for macros + bump intltool requirement to 0.40.0 +
	misc. nitpicking.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/dwell-click-applet.glade:
	* data/pointer-capture-applet.glade:	
	Finally add Francesco to doc credits. See changelog from 2008-03-27.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (accessibility_enabled): Avoid getting launched by
	g-s-d again when we disable our gconf keys.
	* src/dwell-click-applet.c: Remove an unused var and some cleanup.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-timer.c: Remove unnecessary g_timer_stop() calls.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:
	* src/mt-timer.c:
	* man/mousetweaks.1:

	Change the dwell delay range from 0.5-3.0 sec to 0.2-3.0 sec.

2008-06-26 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Add time animation to enable button.

2008-06-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (dwell_do_pointer_click): Add a short delay between
	button-press and -release events. This should allow GOK to handle
	events generated by mousetweaks.

	For details see bug #538004

2008-06-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-common.c: Fix compiler warnings
	* src/mt-main.c: (main): Report at-spi leaks if there are any.
	(within_tolerance): rename function to below_threshold and
	remove sqrt() and pow() calls.

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment: 2.23.5

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>
